# storage/api-docs/api-docs.json
@@ -1378,7 +1378,7 @@
                 "operationId": "getMeterReadingList",
                 "parameters": [
                     {
-                        "name": "registered_month_id",
+                        "name": "period",
                         "in": "query",
                         "description": "Filter by registered month ID",
                         "required": false,
@@ -2097,7 +2097,7 @@
                                                                 "type": "string",
                                                                 "example": "RT 02"
                                                             },
-                                                            "tagihan": {
+                                                            "bill": {
                                                                 "properties": {
                                                                     "id": {
                                                                         "type": "integer",
